fix sizing issues

--- a/css/main.css
+++ b/css/main.css
@@ -28,30 +28,30 @@ body {
 
 .qr-code-card {
   background-color: var(--white);
-  width: 375px;
+  width: 350px;
   padding: 1rem;
-  border-radius: 10px;
+  border-radius: 1rem;
 }
 
 .card-title {
   font-weight: 700;
-  font-size: 1rem;
-  margin-bottom: .7rem;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
   color: var(--blue-dark);
 }
 
 .card-instruction {
-  font-size: .75rem;
+  font-size: 1rem;
   color: var(--blue-gray);
 }
 
 .qr-code-img {
   max-width: 100%;
   display: block;
-  border-radius: .5rem;
+  border-radius: 1rem;
 }
 
 .card-data {
   text-align: center;
-  padding: 1rem .4rem;
+  padding: 1.2rem .8rem;
 }
