--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ body {
   width: 350px;
   padding: 1rem;
   border-radius: 1rem;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .card-title {
